# Sentinel

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/metrics/cnn/: cnn_resnet18.pt  metrics.json
backend/metrics/ensemble/: ensemble.joblib  metrics.json
backend/metrics/lstm/: lstm_climate.keras  metrics.json  scaler.npz
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py
backend/src/sentinel/: __init__.py  cli.py  config.py  geo.py  logging.py
backend/src/sentinel/api/: __init__.py  app.py  deps.py  schemas.py
backend/src/sentinel/data/: __init__.py  climate.py  download.py  geosplit.py  global_fire.py  presets.py  wildfire.py
backend/src/sentinel/db/: __init__.py  base.py  models.py  schema.py
backend/src/sentinel/ingest/: __init__.py  firms.py  imagery.py  pipeline.py  storage.py  weather.py
backend/src/sentinel/models/: __init__.py  cnn.py  ensemble.py  inference.py  lstm.py
backend/src/sentinel/serving/: __init__.py  repository.py  scorer.py
backend/src/sentinel/tasks/: __init__.py  celery_app.py  scoring.py
backend/src/sentinel/training/: __init__.py  build_ensemble.py  metrics.py  seed.py  train_cnn.py  train_lstm.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_climate.py  test_cnn_model.py  test_db_integration.py  test_db_models.py  test_ensemble.py  test_firms.py  test_geo.py  test_geosplit.py  test_global_fire.py  test_imagery.py  test_lstm_smoke.py  test_metrics.py  test_pipeline.py  test_scorer.py  test_scoring_task.py  test_storage.py  test_train_cnn_smoke.py  test_weather.py  test_wildfire_dataset.py
frontend/: .env.example  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Dashboard.tsx  MapView.tsx
frontend/src/lib/: api.ts  risk.ts
