[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — wildfire risk forecasting engine (ingestion, geospatial ML, real-time scoring)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sentinel" }]

dependencies = [
    "sqlalchemy>=2.0.36",
    "geoalchemy2>=0.16.0",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer>=0.15.1",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "boto3>=1.35.0",
    "shapely>=2.0.6",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "pillow>=10.4",
    "kagglehub>=0.3.4",
]

[project.optional-dependencies]
# PyTorch CNN stack (Phase 2). CPU wheels by default.
torch = [
    "torch>=2.4",
    "torchvision>=0.19",
]
# TensorFlow LSTM stack (Phase 3), isolated to avoid clashing with torch.
tf = [
    "tensorflow>=2.17",
]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "moto[s3]>=5.0.0",
    "boto3-stubs[s3]>=1.35.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes / pycodestyle
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = ["B008"]       # typer uses function calls in argument defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["sentinel"]

[[tool.mypy.overrides]]
module = [
    "geoalchemy2.*",
    "shapely.*",
    "moto.*",
    "respx.*",
    "sklearn.*",
    "torchvision.*",
    "kagglehub.*",
    "PIL.*",
    "tensorflow.*",
    "keras.*",
    "joblib.*",
]
ignore_missing_imports = true

# ML modules lean on torch/torchvision/sklearn whose stubs are incomplete;
# relax the strictest checks here while keeping the rest of the codebase strict.
[[tool.mypy.overrides]]
module = [
    "sentinel.data.*",
    "sentinel.models.*",
    "sentinel.training.*",
]
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that require a live PostGIS database (set DATABASE_URL)",
]
filterwarnings = ["error::DeprecationWarning:sentinel.*"]

[tool.coverage.run]
source = ["sentinel"]
branch = true

[tool.coverage.report]
show_missing = true
